[ DOC ] update hardware list/command-E/commandRandW

--- a/doc/1.0_tinyI2Cabstract.md
+++ b/doc/1.0_tinyI2Cabstract.md
@@ -45,15 +45,13 @@ I^2^CやSPI通信したり、個別にプルアップ／プルダウンを指定
 以下のいずれかのマイクロコントローラを搭載したマイコンボードが必要です：
 
 - LPC824
-    - https://developer.mbed.org/platforms/LPCXpresso824-MAX/
-    - https://developer.mbed.org/platforms/Switch-Science-mbed-LPC824/
-    <!-- - TODO: LPC824搭載mbedへのリンクのリスト -->
+    - <https://developer.mbed.org/platforms/LPCXpresso824-MAX/>
+    - <https://developer.mbed.org/platforms/Switch-Science-mbed-LPC824/>
 - LPC11U35
-    - https://developer.mbed.org/platforms/EA-LPC11U35/
-    - https://developer.mbed.org/platforms/TG-LPC11U35-501/
-    <!-- - TODO: LPC11U35搭載mbedへのリンクのリスト -->
+    - <https://developer.mbed.org/platforms/EA-LPC11U35/>
+    - <https://developer.mbed.org/platforms/TG-LPC11U35-501/>
 - LPC1768
-    - https://developer.mbed.org/platforms/mbed-LPC1768/
+    - <https://developer.mbed.org/platforms/mbed-LPC1768/>
 
 ## 使い方
 <!-- ### コンソールから使う場合 -->
@@ -239,15 +237,19 @@ Table: I2Cバス変更パケットの例
 
 ## SPIバス操作コマンド
 ### `'E'` 0x45 SPI transfer start
-SPIバスの操作をします。
+SPIバスの操作をします。8または16ビットワードが選択できます
+（[R/Wコマンド](#internal-registers)参照）。
+- データ長はワード長のことです。8ビットと16ビットで最短有効パケット長が
+異なるので注意が必要です。
+- 書き込むだけならば読み出し長を0にします。読み出すだけの場合もたいていは
 
-Table: minimum plength = 8
+Table: 8ビットワードで1ワード書き込む例(minimum plength = 8)
 
 | head | data length(W) | data length(R\) | binary data to write | tail |
 |:----:|:--------------:|:---------------:|:--------------------:|:----:|
 |  E   |    0x?0 ?1     |     0x?0 ?0     |       0x?D ?E        |  P   |
 
-Table: minimum plength = 10 (16bit)
+Table: 16ビットワードで1ワード書き込む例(minimum plength = 10)
 
 | head | data length(W) | data length(R\) | binary data to write | tail |
 |:----:|:--------------:|:---------------:|:--------------------:|:----:|
@@ -271,7 +273,10 @@ Table: write and read
 -->
 
 ## GPIO操作コマンド
-This is a subset of [R/W commands](#internal-registers); only access GPIO's status registers.
+これらは内部レジスタ操作コマンド（[R/Wコマンド](#internal-registers)）
+のサブセットになっています。
+GPIOステータスレジスタのみを操作できます。
+<!-- This is a subset of [R/W commands](#internal-registers); only access GPIO's status registers. -->
 
 ### `'I'` 0x49 read GPIO port register
 ### `'O'` 0x4F write to GPIO port register
