--- a/doc/2.0_PythonAPI.md
+++ b/doc/2.0_PythonAPI.md
@@ -5,108 +5,116 @@
 - PySerial
 
 ## コンストラクタ
-\hrulefill
-
+\hrulefill<!-- === === === === === === === === === === === === === === ===  -->
 ```python
 serial2i2c(  str port = 'com1',
              str baud = '115200'
              )
 ```
 
-\dotfill
+\dotfill  <!-- *** *** *** *** *** *** *** *** *** *** *** *** *** *** ***  -->
 
 - **argument**
     - **`port`** Serial/UART port name; "COM1", "/dev/ttyUSB0" etc.
     - **`baud`** UART baudrate: 115200 or need to align with firmware setting
       for other rate
 
-\dotfill
+\dotfill  <!-- *** *** *** *** *** *** *** *** *** *** *** *** *** *** ***  -->
+
 
 `port`につながっている`TinyI2C`デバイスに接続する\
 ＊ボーレートを変更する場合はファームウェアにも変更が必要
 
-\hrulefill
+\hrulefill<!-- === === === === === === === === === === === === === === ===  -->
 
 \newpage
 ## UART操作API
-\hrulefill
+\hrulefill<!-- === === === === === === === === === === === === === === ===  -->
 
 ```python
 serial2i2c::raw_write( str data = "C4FEE0CA"
            )
 ```
-\dotfill
+\dotfill  <!-- *** *** *** *** *** *** *** *** *** *** *** *** *** *** ***  -->
+
 
 - **argument**
     - **`data`** raw data to send, as text string
 - **return**
     - None
 
-\dotfill
+\dotfill  <!-- *** *** *** *** *** *** *** *** *** *** *** *** *** *** ***  -->
+
 
 生データをUART（COMポート）に出力する
 
-\hrulefill
+\hrulefill<!-- === === === === === === === === === === === === === === ===  -->
 
-\hrulefill
+\hrulefill<!-- === === === === === === === === === === === === === === ===  -->
 
 ```python
 serial2i2c::raw_read(  )
 ```
-\dotfill
+\dotfill  <!-- *** *** *** *** *** *** *** *** *** *** *** *** *** *** ***  -->
+
 
 - **return**
     - \_ser.readline().strip()
 
-\dotfill
+\dotfill  <!-- *** *** *** *** *** *** *** *** *** *** *** *** *** *** ***  -->
+
 
 UARTポートから生データを受け取る
 
-\hrulefill
+\hrulefill<!-- === === === === === === === === === === === === === === ===  -->
 
 \newpage
 ## I^2^Cバス操作API
-\hrulefill
+\hrulefill<!-- === === === === === === === === === === === === === === ===  -->
 
 ```python
 serial2i2c::start(   )
 ```
-\dotfill
+\dotfill  <!-- *** *** *** *** *** *** *** *** *** *** *** *** *** *** ***  -->
+
 
 - **return**
     - None
 
-\dotfill
+\dotfill  <!-- *** *** *** *** *** *** *** *** *** *** *** *** *** *** ***  -->
+
 
 現在のI^2^Cポートにスタートコンディションを発行する
 
-\hrulefill
+\hrulefill<!-- === === === === === === === === === === === === === === ===  -->
 
-\hrulefill
+\hrulefill<!-- === === === === === === === === === === === === === === ===  -->
 
 ```python
 serial2i2c::stop(   )
 ```
-\dotfill
+\dotfill  <!-- *** *** *** *** *** *** *** *** *** *** *** *** *** *** ***  -->
+
 
 - **return**
     - None
 
-\dotfill
+\dotfill  <!-- *** *** *** *** *** *** *** *** *** *** *** *** *** *** ***  -->
 
 
 現在のI^2^Cポートにストップコンディションを発行する
 
-\hrulefill
+\hrulefill<!-- === === === === === === === === === === === === === === ===  -->
 
-\hrulefill
+\hrulefill<!-- === === === === === === === === === === === === === === ===  -->
 
 ```python
 serial2i2c::read(  int address,
                    int length = 1
                    )
 ```
-\dotfill
+\dotfill  <!-- *** *** *** *** *** *** *** *** *** *** *** *** *** *** ***  -->
+
 
 - **argument**
     - **`address`** *8bit* I^2^C slave address
@@ -114,20 +122,22 @@ serial2i2c::read(  int address,
 - **return**
     - str raw_read()
 
-\dotfill
+\dotfill  <!-- *** *** *** *** *** *** *** *** *** *** *** *** *** *** ***  -->
+
 
 現在のI^2^Cポートにつながっているスレーブデバイスから`length`バイト読み出す
 
-\hrulefill
+\hrulefill<!-- === === === === === === === === === === === === === === ===  -->
 
-\hrulefill
+\hrulefill<!-- === === === === === === === === === === === === === === ===  -->
 
 ```python
 serial2i2c::write( int address,
                    int data = 0
                    )
 ```
-\dotfill
+\dotfill  <!-- *** *** *** *** *** *** *** *** *** *** *** *** *** *** ***  -->
+
 
 - **argument**
     - **`address`** *8bit* I^2^C slave address
@@ -135,14 +145,15 @@ serial2i2c::write( int address,
 - **return**
     - str raw_read()
 
-\dotfill
+\dotfill  <!-- *** *** *** *** *** *** *** *** *** *** *** *** *** *** ***  -->
+
 
 
 現在のI^2^Cポートにつながっているスレーブデバイスに`data`を書き込む
 
-\hrulefill
+\hrulefill<!-- === === === === === === === === === === === === === === ===  -->
 
-\hrulefill
+\hrulefill<!-- === === === === === === === === === === === === === === ===  -->
 
 ```python
 serial2i2c::write_and_read(  int address,
@@ -150,7 +161,8 @@ serial2i2c::write_and_read(  int address,
                              int rlength = 1
                              )
 ```
-\dotfill
+\dotfill  <!-- *** *** *** *** *** *** *** *** *** *** *** *** *** *** ***  -->
+
 
 - **argument**
     - **`address`** *8bit* I^2^C slave address
@@ -159,37 +171,40 @@ serial2i2c::write_and_read(  int address,
 - **return**
     - str raw_read()
 
-\dotfill
+\dotfill  <!-- *** *** *** *** *** *** *** *** *** *** *** *** *** *** ***  -->
+
 
 現在のI^2^Cポートにつながっているスレーブデバイスに`data`を書き込んだあとで
 `length`バイト読み出す
 
-\hrulefill
+\hrulefill<!-- === === === === === === === === === === === === === === ===  -->
 
 <!-- ### `'C'` 0x43 change channel -->
 
-\hrulefill
+\hrulefill<!-- === === === === === === === === === === === === === === ===  -->
 
 ```python
 serial2i2c::setChannel(  int channel = 0
                          )
 ```
-\dotfill
+\dotfill  <!-- *** *** *** *** *** *** *** *** *** *** *** *** *** *** ***  -->
+
 
 - **argument**
     - **`channel`** I^2^C bus channel 1~4
 - **return**
     - str raw_read()
 
-\dotfill
+\dotfill  <!-- *** *** *** *** *** *** *** *** *** *** *** *** *** *** ***  -->
+
 
 I^2^Cポートを変更する
 
-\hrulefill
+\hrulefill<!-- === === === === === === === === === === === === === === ===  -->
 
 \newpage
 ## SPIバス操作コマンドAPI
-\hrulefill
+\hrulefill<!-- === === === === === === === === === === === === === === ===  -->
 
 ```python
 serial2i2c::write_and_read_SPI(  int wlength = 1,
@@ -197,7 +212,8 @@ serial2i2c::write_and_read_SPI(  int wlength = 1,
                                  int data = 0xC4FEE0CA
                                  )
 ```
-\dotfill
+\dotfill  <!-- *** *** *** *** *** *** *** *** *** *** *** *** *** *** ***  -->
+
 
 - **argument**
     - **`wlength`** _word length_ to write
@@ -206,41 +222,44 @@ serial2i2c::write_and_read_SPI(  int wlength = 1,
 - **return**
     - str raw_read()
 
-\dotfill
+\dotfill  <!-- *** *** *** *** *** *** *** *** *** *** *** *** *** *** ***  -->
+
 
 SPIバスに8または16ビットデータ列を`wlength` _ワード_ 書き込んだあと
 ダミーデータを`rlength` _ワード_ 書込む
 
-\hrulefill
+\hrulefill<!-- === === === === === === === === === === === === === === ===  -->
 
 \newpage
 ## 内部レジスタ操作コマンド
-\hrulefill
+\hrulefill<!-- === === === === === === === === === === === === === === ===  -->
 
 ```python
 serial2i2c::reg_read(  str registers = "012"
                        )
 ```
-\dotfill
+\dotfill  <!-- *** *** *** *** *** *** *** *** *** *** *** *** *** *** ***  -->
+
 
 - **argument**
     - **`registers`**
 - **return**
     - str raw_read()
 
-\dotfill
+\dotfill  <!-- *** *** *** *** *** *** *** *** *** *** *** *** *** *** ***  -->
+
 
 `registers`のデータをまとめて読み出す
 
-\hrulefill
+\hrulefill<!-- === === === === === === === === === === === === === === ===  -->
 
-\hrulefill
+\hrulefill<!-- === === === === === === === === === === === === === === ===  -->
 
 ```python
 serial2i2c::reg_write( list pair = [ ('1', 0xFF),]
                        )
 ```
-\dotfill
+\dotfill  <!-- *** *** *** *** *** *** *** *** *** *** *** *** *** *** ***  -->
 
 - **argument**
     - **`pair`** list of touple
@@ -249,7 +268,8 @@ serial2i2c::reg_write( list pair = [ ('1', 0xFF),]
 - **return**
     - str raw_read()
 
-\dotfill
+\dotfill  <!-- *** *** *** *** *** *** *** *** *** *** *** *** *** *** ***  -->
+
 
 それぞれの`register`に、対応する`data`を書き込む
 
@@ -263,4 +283,4 @@ serial2i2c::reg_write( list pair = [ ('1', 0xFF),]
     '5'     =>   I2C_CONF
     '6'     =>   SPI_CONF
 
-\hrulefill
+\hrulefill<!-- === === === === === === === === === === === === === === ===  -->
