[ DOC ] fix typo in yaml

--- a/doc/1.0_tinyI2Cabstract.md
+++ b/doc/1.0_tinyI2Cabstract.md
@@ -181,9 +181,9 @@ $ python gui/main.py
 |  S   |      0x?8 ?1      |   0x?0 ?4   |  P   |
  -->
 <!-- Table: return packet -->
-Table: 返却パケット
+<!-- Table: 返却パケット
 
-`Out/commandSandP_ro_rp.tmd`{.include}
+`Out/commandSandP_ro_rp.tmd`{.include} -->
 
 ![返却パケット](images/waves/commandSandP_ro_rp.png)
 <!--
@@ -239,9 +239,13 @@ Table: I2Cバス変更パケットの例
 ### `'E'` 0x45 SPI transfer start
 SPIバスの操作をします。8または16ビットワードが選択できます
 （[R/Wコマンド](#internal-registers)参照）。
+
 - データ長はワード長のことです。8ビットと16ビットで最短有効パケット長が
-異なるので注意が必要です。
-- 書き込むだけならば読み出し長を0にします。読み出すだけの場合もたいていは
+  異なるので注意が必要です。データ長の違いは書込み/読出しともに適用されます。
+  16ビットワード時に奇数バイトのデータを送ると _`bad packet`_ エラーパケットが返却されます。
+- SPIフラッシュなど、読出しコマンドを書き込んで一気に大量に読むときは16ビット
+  のほうが早く読み出せますが、コマンドが奇数バイトの場合は8ビットワードに
+  する必要があります。
 
 Table: 8ビットワードで1ワード書き込む例(minimum plength = 8)
 
