[ DOC ] filename order change
- 1.0 -> 1.0 [MOD]
      `> 2.0 [NEW]
- 2.0 -> 3.0 [RENAME]
- TITLE.md includes all of then in correct order

--- a/doc/1.0_tinyI2Cabstract.md
+++ b/doc/1.0_tinyI2Cabstract.md
@@ -36,7 +36,8 @@ I^2^CやSPI通信したり、個別にプルアップ／プルダウンを指定
 - PySerialライブラリ
     - PIP(Pythonのパッケージインストーラ)で入手できます
     - `$ pip install pyserial`{.sh}
-- ___Windowsのみ___ mbedインタフェース用のドライバ[^mbed_Serial_port_driver] をインストールする必要があります。
+- ___Windowsのみ___ mbedインタフェース用のドライバ[^mbed_Serial_port_driver] を
+  インストールする必要があります。
 
 <!--  -->
 [^mbed_Serial_port_driver]: <http://developer.mbed.org/handbook/Windows-serial-configuration>
@@ -91,427 +92,3 @@ $ dist/TinyI2C
 $ python gui/main.py
 ```
 と実行するとなにかヒントが出るかもしれません。
-
-# コマンドセットとプロトコル仕様
-
-+------------------------------------------------------------------------------+
-|これらのコマンド文字とパケットの構造はNXP社のインタフェースIC **`SC18IM700`** |
-|の仕様<sub>~~をパクっt~~</sub>に**_強く_**インスパイアされています。          |
-+------------------------------------------------------------------------------+
-
-## 基本的なプロトコル仕様
-
-- コマンドパケットの開始/終了には予約されている文字を1文字ずつ使います。パケットの
-先頭文字(**`head`**)には何種類かありますが終端(**`tail`**)は常にアスキーの **`P`** または16進の
-**`0x50`** を用います。
-    - 先頭文字なしで **`P`** を送ると、現在選択されている I^2^Cバスで
-    （スタートコンディション動作を起こさずに）ストップコンディション動作を行い、
-    **"ok"** パケットが返却されます。
-- **`head/tail`** 以外のデータはすべて1バイトを2バイトに分割して送信します。
-  分割されたそれぞれの4ビットはLSBに割当てます。
-  各MSBは0x03~0x0Fの任意の4ビットをマスクとして加えます。
-    - 例：マスクを0x30として0x**A5** → 0x3**A** 0x3**5**
-    - _0x30をマスクにするとアスキー文字列として送ることができます。_
-- **`tinyI2C`** モジュールはパケットを受けとるUARTポートに終端文字が送られてくるのを
-(永久に)監視し続け、送られると最初にパケット文字列の長さ(`plength`)を測ります。
-次に先頭文字がいずれかのコマンド文字と一致するか確認します。
-    - 先頭文字が無効な場合は **"command is not implemented"** パケットが返却されます。
-    - 先頭文字が有効な場合は有効文字列長(`plength - 2`：パケット長から先頭と終端
-      の2文字を引いた長さ)を確認します。
-        - 残念ながら文字列がそのコマンドの最低文字列長に満たない場合は **"bad packet"**
-          パケットが返却されます。
-    - 有効なコマンドパケットと確認できると **`TinyI2C`** モジュールはコマンドを実行し、結果を
-      返却パケットとしてホストに返します。返却パケットはデータを伴う場合は各データバイトを
-      16進文字列に変換し、コンマ区切りにされます。エラーでない返却パケットの終端は常に
-      "ok"という文字列です。
-
-## I^2^Cバス操作コマンド
-### `'S'` 0x53 I^2^C-bus START
-### `'P'` 0x50 I^2^C-bus STOP, end of packet
-
-1. プロトコルはアスキーの **`S`** で開始され、同時に I^2^Cバスにスタートコンディションを発行します。
-  その直後に7ビットの I^2^Cスレーブアドレスと`R(1)`または`W(0)`のコマンドビットが続きます。\
-  このあと、
-    - コマンドビットが`W(0)`（書込み）：送られるデータの長さ（1~255）と実際のデータを送る
-    - コマンドビットが`R(1)`（読出し）：読みだすデータの長さ（1~255）を送る
-1. パケットは **`P`** で終端します。このとき I^2^Cバスにストップコンディションを発行します。
-1. 返却パケットはコマンドビットの内容に依存します。
-    - 常に最初はスレーブの応答によって`ACK`または`NAK`が返ります。\
-      その後、
-        - コマンドビットが`W(0)`（書込み）：**`ok`** が返ります
-        - コマンドビットが`R(1)`（読出し）：8ビットごとに16進数の文字列と
-          終端の **`ok`** がコンマ区切りで返ります
-
-#### 書込みのみを行う例
-<!-- Table: _8bit_ スレーブアドレス0x80に4バイト書込むコマンドパケット例
-
-`Out/commandSandP_wo.tmd`{.include} -->
-![_8bit_ スレーブアドレス0x80に4バイト書込む
-  コマンドパケット例](images/waves/commandSandP_wo.png)
-
-![該当するI^2^Cバスの動き](images/waves/commandSandP_wo_bus.png)
-
-<!--
-| head  | slave address(W) | data length |          binary data to write           | tail  |
-|:-----:|:----------------:|:-----------:|:---------------------------------------:|:-----:|
-|   S   |    0x\_8 \_0     |  0x\_0 \_4  |    0x_D \_E \_A \_D \_B \_E \_A \_F     |   P   |
-| `'S'` |      `'80'`      |   `'04'`    |              `'=>:=;>:?'`               | `'P'` |
-| 0x53  |    0x38 0x30     |  0x30 0x34  | 0x3D 0x3E 0x3A 0x3D 0x3B 0x3E 0x3A 0x3F | 0x50  |
--->
-
-<!-- Table: return packet -->
-<!-- Table: 返却パケット
-
-| result | head  | delimiter | tail |
-|:------:|:-----:|:---------:|:----:|
-| sucess | "ACK" |     ,     | "ok" |
-|  fail  | "NAK" |     ,     | "ok" | -->
-![返却パケット](images/waves/commandSandP_wo_ret.png)
-
-#### 読出しのみを行う例
-<!-- Table: command packet - read 4 bytes from slave at 0x80(8bit) -->
-<!-- Table: _8bit_ スレーブアドレス0x80から4バイト読出すコマンドパケット例
-
-`Out/commandSandP_ro.tmd`{.include} -->
-![_8bit_ スレーブアドレス0x80から4バイト読出すコマンドパケット例](images/waves/commandSandP_ro.png)
-
-<!--
-| head | slave address(R\) | data length | tail |
-|:----:|:-----------------:|:-----------:|:----:|
-|  S   |      0x?8 ?1      |   0x?0 ?4   |  P   |
- -->
-<!-- Table: return packet -->
-<!-- Table: 返却パケット
-
-`Out/commandSandP_ro_rp.tmd`{.include} -->
-
-![返却パケット](images/waves/commandSandP_ro_rp.png)
-<!--
-| result |  head   | delimiter |                data                 | tail |
-|:------:|:-------:|:---------:|:-----------------------------------:|:----:|
-| sucess | `"ACK"` |     ,     | actual data: `"AA","BB","CC","DD",` | "ok" |
-|  fail  | `"NAK"` |     ,     | dummy data: `"C4","FE","E0","CA",`  | "ok" |
--->
-
-#### 書き込んだ後読み出す例
-<!-- Table: command packet - write and read 4 bytes to/from slave at 0x80(8bit) -->
-Table: スレーブアドレス0x80に4バイトずつ書込み・読出しを行うコマンドパケット例
-
-`Out/commandSandP_SSP.tmd`{.include}
-
-<!--
-| head | slave address(W) | data length |       binary data to write       | repeated start | slave address(R\) | data length | tail |
-|:----:|:----------------:|:-----------:|:--------------------------------:|:--------------:|:-----------------:|:-----------:|:----:|
-|  S   |    0x?8 ?0     |  0x?0 ?4  | 0x_D ?E ?A ?D ?B ?E ?A ?F |       S        |     0x?8 ?1     |  0x?0 ?4  |  P   |
--->
-
-<!-- Table: return packet -->
-Table: 返却パケット
-
-`Out/commandSandP_ro_rp.tmd`{.include}
-<!--
-| result | head  | delimiter |                data                 | tail |
-|:------:|:-----:|:---------:|:-----------------------------------:|:----:|
-| sucess | "ACK" |     ,     | actual data: `"AA","BB","CC","DD",` | "ok" |
-|  fail  | "NAK" |     ,     | dummy data:  `"C4","FE","E0","CA",` | "ok" |
--->
-
-### `'C'` 0x43 change channel
-<!-- You can select I2C channel by sending `'C'` and channel number `'0'`to`'3'` with `tail` char. -->
-**`C`** に続いてチャネル番号と終端を送ると I^2^Cバスを変更できます。チャネル番号は
-アスキー文字の'0'~'3'です。
-
-- _サポートされていないチャネルを選択すると強制的に**チャネル0**が選択されます。_
-
-Table: I2Cバス変更パケットの例
-
-`Out/commandC.tmd`{.include}
-<!--
-| head | channel | tail |            note            |
-|:----:|:-------:|:----:|:--------------------------:|
-|  C   |   '0'   |  P   |                            |
-|  C   |   '1'   |  P   |     LPC11U35未サポート     |
-|  C   |   '2'   |  P   | LPC11U35/LPC1768未サポート |
-|  C   |   '3'   |  P   | LPC11U35/LPC1768未サポート |
- -->
-
-## SPIバス操作コマンド
-### `'E'` 0x45 SPI transfer start
-SPIバスの操作をします。8または16ビットワードが選択できます
-（[R/Wコマンド](#internal-registers)参照）。
-
-- データ長はワード長のことです。8ビットと16ビットで最短有効パケット長が
-  異なるので注意が必要です。データ長の違いは書込み/読出しともに適用されます。
-  16ビットワード時に奇数バイトのデータを送ると _`bad packet`_ エラーパケットが返却されます。
-- SPIフラッシュなど、読出しコマンドを書き込んで一気に大量に読むときは16ビット
-  のほうが早く読み出せますが、コマンドが奇数バイトの場合は8ビットワードに
-  する必要があります。
-
-Table: 8ビットワードで1ワード書き込む例(minimum plength = 8)
-
-| head | data length(W) | data length(R\) | binary data to write | tail |
-|:----:|:--------------:|:---------------:|:--------------------:|:----:|
-|  E   |    0x?0 ?1     |     0x?0 ?0     |       0x?D ?E        |  P   |
-
-Table: 16ビットワードで1ワード書き込む例(minimum plength = 10)
-
-| head | data length(W) | data length(R\) | binary data to write | tail |
-|:----:|:--------------:|:---------------:|:--------------------:|:----:|
-|  E   |    0x?0 ?1     |     0x?0 ?0     |    0x?D ?E ?A ?D     |  P   |
-
-Table: write and read
-
-| head | data length(W) | data length(R\) |   binary data to write    | tail |
-|:----:|:--------------:|:---------------:|:-------------------------:|:----:|
-|  E   |    0x?0 ?4     |     0x?0 ?4     | 0x?D ?E ?A ?D ?B ?E ?A ?F |  P   |
-<!--
-~~~
-/*
-"0|   1   2|   3   4|   5   6  7  8  9 10 11 12|13" //plength=14
-"E| 0x\_0 \_1| 0x\_0 \_0| 0x_D \_E| P"                   //minimum plength=8
-"E| 0x\_0 \_1| 0x\_0 \_0| 0x_D \_E|_A \_D| P"             //minimum plength=10(16bit)
-"E| 0x\_0 \_4| 0x\_0 \_0| 0x_D \_E \_A \_D \_B \_E \_A \_F| P" //write
-"E| 0x\_0 \_4| 0x\_0 \_4| 0x_D \_E \_A \_D \_B \_E \_A \_F| P" //write and read
-*/
-~~~
--->
-
-## GPIO操作コマンド
-これらは内部レジスタ操作コマンド（[R/Wコマンド](#internal-registers)）
-のサブセットになっています。
-GPIOステータスレジスタのみを操作できます。
-<!-- This is a subset of [R/W commands](#internal-registers); only access GPIO's status registers. -->
-
-### `'I'` 0x49 read GPIO port register
-### `'O'` 0x4F write to GPIO port register
-
-| head | GPIO | tail |
-|:----:|:----:|:----:|
-|  I   | '0'  |  P   |
-|  I   | '1'  |  P   |
-<!--  -->
-
-| head | GPIO |  data   | tail |
-|:----:|:----:|:-------:|:----:|
-|  O   | '0'  | 0x?A ?A |  P   |
-|  O   | '1'  | 0x?A ?A |  P   |
-<!--  -->
-| register | name in python | purpose          |
-|:--------:|:--------------:|:-----------------|
-|    0     |   GPIO0_STAT   | status of GPIO 0 |
-|    1     |   GPIO1_STAT   | status of GPIO 1 |
-
-<!--
-~~~
-"I| '0'| P"
-"O| '0'| 0x_a \_A| P"
-~~~
--->
-
-## 内部レジスタ操作コマンド
-### `'R'` 0x52 read internal register
-### `'W'` 0x57 write to internal register
-
-Table: single register read
-
-| head | register | tail |
-|:----:|:--------:|:----:|
-|  R   |   '0'    |  P   |
-|  R   |   '1'    |  P   |
-
-+--------------------------------------------------------+
-|return packet's order is same as command packet's order |
-+--------------------------------------------------------+
-
-this is dummy message
-
-Table: multi registers read
-
-| head | register(1) | register(2) | ... | register(n) | tail |
-|:----:|:-----------:|:-----------:|:---:|:-----------:|:----:|
-|  R   |     '0'     |     '1'     | ... |     '5'     |  P   |
-|  R   |     '1'     |     '0'     | ... |     '9'     |  P   |
-
-Table: multi registers write
-
-`Out/commandRandW_multi.tmd`{.include}
-
-<!-- | head | register(1) | register data (1) | register(2) | register data (2) | ... | register(n) | register data (n) | tail |
-|:----:|:-----------:|:-----------------:|:-----------:|:-----------------:|:---:|:-----------:|:-----------------:|:----:|
-|  W   |     '0'     |     0x?A ?A     |     '1'     |     0x?A ?B     | ... |     '5'     |     0x?A ?D     |  P   |
-|  W   |     '1'     |     0x?A ?A     |     '0'     |     0x?A ?B     | ... |     '9'     |     0x?A ?D     |  P   | -->
-<!--  -->
-
-Table: レジスタのリスト
-
-`Out/register_list.tmd`{.include}
-
-<!--
-| register | name in python | purpose                               |
-|:--------:|:--------------:|:--------------------------------------|
-|    0     |    CHIP_ID     | converter's chip ID                   |
-|    1     |   GPIO0_STAT   | status of GPIO 0                      |
-|    2     |   GPIO1_STAT   | status of GPIO 1                      |
-|    4     |   GPIO1_CONF   | GPIO 0 IO configuration               |
-|    3     |   GPIO0_CONF   | GPIO 1 IO configuration               |
-|    5     |    I2C_CONF    | I^2^C channel 1~4 speed configuration |
-|    6     |    SPI_CONF    | SPI speed and polarity configuration  |
- -->
-
-Table: レジスタ０
-
-`Out/register0.tmd`{.include}
-<!--
-| register 0  | command | CHIP_ID                    |
-|:-----------:|:-------:|:---------------------------|
-| [7\.\.\.0\] |   R/W   | returns chip ID character: |
-|             |         | '0'(`0x30`) - LPC824                |
-|             |         | '1'(`0x31`) - LPC1768               |
-|             |         | '2'(`0x32`) - LPC11U24 or LPC11U35  |
- -->
-Table: レジスタ１
-
-`Out/register1.tmd`{.include}
-
-<!-- | register 1  | command | GPIO0_STAT                                                          |
-|:-----------:|:-------:|:--------------------------------------------------------------------|
-| [7\.\.\.0\] |    R    | behavior changes depend on corresponding bit of GPIO0_CONF register |
-|             |         | 1: reads output setting                                             |
-|             |         | 0: reads input of the pin                                           |
-|             |    W    | behavior changes depend on corresponding bit of GPIO0_CONF register |
-|             |         | 1: writes data to the pin                                           |
-|             |         | 0: do nothing                                                       | -->
-
-Table: レジスタ２
-
-`Out/register2.tmd`{.include}
-<!-- | register 2  | command | GPIO1_STAT                                                           |
-|:-----------:|:-------:|:---------------------------------------------------------------------|
-|             |         | **if GPIO1 is not enabled, access to this register will be ignored** |
-| [7\.\.\.0\] |    R    | behavior changes depend on corresponding bit of GPIO1_CONF register  |
-|             |         | 1: reads output setting                                              |
-|             |         | 0: reads input of the pin                                            |
-|             |    W    | behavior changes depend on corresponding bit of GPIO1_CONF register  |
-|             |         | 1: writes data to the pin                                            |
-|             |         | 0: do nothing                                                        | -->
-
-Table: レジスタ３
-
-`Out/register3.tmd`{.include}
-
-<!-- | register 3  | command | GPIO0_CONF                                                                                    |
-|:-----------:|:-------:|:----------------------------------------------------------------------------------------------|
-| [7\.\.\.0\] |    R    | Reads each pin's Input/Output conditions:                                                     |
-|             |         | 1 = the pin is set to output                                                                  |
-|             |         | 0 = the pin is set to input with internal pullup                                              |
-|             |    W    | Sets each pin's Input/Output configurations:                                                  |
-|             |         | 1: sets the pin to an Output. output level is set by corresponding bit of GPIO0_STAT register |
-|             |         | 0: sets the pin to an Input with internal pull-up connected                                   | -->
-
-Table: レジスタ４
-
-`Out/register4.tmd`{.include}
-
-<!-- | register 4  | command | GPIO1_CONF                                                                                    |
-|:-----------:|:-------:|:----------------------------------------------------------------------------------------------|
-|             |         | **if GPIO1 is not enabled, access to this register will be ignored**                          |
-| [7\.\.\.0\] |    R    | Reads each pin's Input/Output conditions:                                                     |
-|             |         | 1: the pin is set to output                                                                   |
-|             |         | 0: the pin is set to input with internal pullup                                               |
-|             |    W    | Sets each pin's Input/Output configurations:                                                  |
-|             |         | 1: sets the pin to an Output. output level is set by corresponding bit of GPIO1_STAT register |
-|             |         | 0: sets the pin to an Input with internal pull-up connected                                   | -->
-
-Table: レジスタ５
-
-`Out/register5.tmd`{.include}
-
-<!-- | register 5  | command | I2C_CONF                                                                                                    |
-|:-----------:|:-------:|:------------------------------------------------------------------------------------------------------------|
-| [7\.\.\.6\] |   R/W   | Read/Write clock configuration of I2C1                                                                      |
-|             |         | 11: I2C1 is set to operate in 800kHz clock                                                                  |
-|             |         | 10: I2C1 is set to operate in 600kHz clock                                                                  |
-|             |         | 01: I2C1 is set to operate in 400kHz clock                                                                  |
-|             |         | 00: I2C1 is set to operate in 200kHz clock                                                                  |
-| [5\.\.\.4\] |         | Read/Write clock configuration of I2C2; **if I2C2 is not enabled, access to this bitfield will be ignored** |
-|             |         | 11: I2C2 is set to operate in 400kHz clock                                                                  |
-|             |         | 10: I2C2 is set to operate in 300kHz clock                                                                  |
-|             |         | 01: I2C2 is set to operate in 200kHz clock                                                                  |
-|             |         | 00: I2C2 is set to operate in 100kHz clock                                                                  |
-| [3\.\.\.2\] |         | Read/Write clock configuration of I2C3; **if I2C3 is not enabled, access to this bitfield will be ignored** |
-|             |         | 11: I2C3 is set to operate in 400kHz clock                                                                  |
-|             |         | 10: I2C3 is set to operate in 300kHz clock                                                                  |
-|             |         | 01: I2C3 is set to operate in 200kHz clock                                                                  |
-|             |         | 00: I2C3 is set to operate in 100kHz clock                                                                  |
-| [1\.\.\.0\] |         | Read/Write clock configuration of I2C4; **if I2C4 is not enabled, access to this bitfield will be ignored** |
-|             |         | 11: I2C4 is set to operate in 400kHz clock                                                                  |
-|             |         | 10: I2C4 is set to operate in 300kHz clock                                                                  |
-|             |         | 01: I2C4 is set to operate in 200kHz clock                                                                  |
-|             |         | 00: I2C4 is set to operate in 100kHz clock                                                                  | -->
-
-Table: レジスタ６
-
-`Out/register6.tmd`{.include}
-
-<!-- | register 6  | command | SPI_CONF                                  |
-|:-----------:|:-------:|:------------------------------------------|
-|    [7\]     |   R/W   | Not used                                  |
-| [6\.\.\.4\] |         | Read/Write clock configuration of SPI     |
-|             |         | 111: SPI is set to operate in 8MHz clock  |
-|             |         | 110: SPI is set to operate in 7MHz clock  |
-|             |         | ...                                       |
-|             |         | 001: SPI is set to operate in 2MHz clock  |
-|             |         | 000: SPI is set to operate in 1MHz clock  |
-|    [3\]     |         | Reads/Wreite polarity of CE print         |
-|             |         | 1: CE is set to HIGH-active               |
-|             |         | 0: CE is set to LOW-active                |
-|    [2\]     |         | Read/Write word size setting of SPI       |
-|             |         | 1: 16 bit word                            |
-|             |         | 0: 8 bit word                             |
-| [1\.\.\.0\] |         | Read/Write SPI mode                       |
-|             |         | 11: SPI is set to operate in clock mode 3 |
-|             |         | 10: SPI is set to operate in clock mode 2 |
-|             |         | 01: SPI is set to operate in clock mode 1 |
-|             |         | 00: SPI is set to operate in clock mode 0 | -->
-
-<!--
-~~~c
-/*
-7 not used
-6:4 frequency
-3 CE pol
-2 word size(0=8bit,1=16bit)
-1:0 pol(corresponds to spi.format())
-*/
-~~~
-~~~c
-ID_LPC824 = '0',
-ID_LPC1768 = '1',
-ID_LPC11UXX = '2',
-~~~
-~~~c
-CHIP_ID = '0',
-GPIO0_STAT = '1',
-GPIO1_STAT = '2',
-GPIO0_CONF = '3',
-GPIO1_CONF = '4',
-I2C_CONF = '5',
-SPI_CONF = '6',
-~~~
-~~~
-"R| '0'| P"
-"R| '0'| '1'| ...| P"
-"W| '0' 0x_a ?A| P"
-"W| '0' 0x_a ?A| '1' 0x_b ?B| ...| P"
-~~~
--->
-<!-- # Contribution by
-Kazuki Yamamoto ( <k.yamamoto.08136891@gmail.com> )
-
-# License
-- [CC-BY-SA](http://creativecommons.org/licenses/by-sa/4.0/legalcode)
-- [CC-BY-SA 日本語](http://creativecommons.org/licenses/by-sa/2.1/jp/legalcode)
-
-# Author
-
-[K4zuki](https://github.com/K4zuki) -->
