[ DOC ] add command S and P write + read waveform

--- a/doc/2.0_Commands.md
+++ b/doc/2.0_Commands.md
@@ -66,13 +66,18 @@
 
 #### 書き込んだ後読み出す例
 
-Table: スレーブアドレス0x80に4バイトずつ書込み・読出しを行うコマンドパケット例
+![スレーブアドレス0x80に4バイトずつ書込み・読出しを行う\
+コマンドパケット例](images/waves/commandSandP_SSP.png)
+
+![返却パケット](images/waves/commandSandP_ro_rp.png)
+
+<!-- Table: スレーブアドレス0x80に4バイトずつ書込み・読出しを行うコマンドパケット例
 
 `Out/commandSandP_SSP.tmd`{.include}
 
 Table: 返却パケット
 
-`Out/commandSandP_ro_rp.tmd`{.include}
+`Out/commandSandP_ro_rp.tmd`{.include} -->
 
 ### `'C'` 0x43 change channel
 **`C`** に続いてチャネル番号と終端を送ると I^2^Cバスを変更できます。チャネル番号は
@@ -89,18 +94,21 @@ Table: I2Cバス変更パケットの例
 SPIバスの操作をします。8または16ビットワードが選択できます
 （[R/Wコマンド](#internal-registers)参照）。
 
-- データ長はワード長のことです。8ビットと16ビットで最短有効パケット長が
+- データ長はワード数のことです。8ビットと16ビットで最短有効パケット長が
   異なるので注意が必要です。データ長の違いは書込み/読出しともに適用されます。
-  16ビットワード時に奇数バイトのデータを送ると _`bad packet`_ エラーパケットが返却されます。
+  16ビットワード時に奇数バイトのデータを送ると _`bad packet`_ エラーパケットが
+  返却されます。
 - SPIフラッシュなど、読出しコマンドを書き込んで一気に大量に読むときは16ビット
   のほうが早く読み出せますが、コマンドが奇数バイトの場合は8ビットワードに
   する必要があります。
 
-Table: 8ビットワードで1ワード書き込む例(minimum plength = 8)
+![8ビットワードで1ワード書き込む例(minimum plength = 8)](images/waves/commandE_wo.png)
+
+<!-- Table: 8ビットワードで1ワード書き込む例(minimum plength = 8)
 
 | head | data length(W) | data length(R\) | binary data to write | tail |
 |:----:|:--------------:|:---------------:|:--------------------:|:----:|
-|  E   |    0x?0 ?1     |     0x?0 ?0     |       0x?D ?E        |  P   |
+|  E   |    0x?0 ?1     |     0x?0 ?0     |       0x?D ?E        |  P   | -->
 
 Table: 16ビットワードで1ワード書き込む例(minimum plength = 10)
 
