fix markdown files

--- a/doc/1.0_tinyI2Cabstract.md
+++ b/doc/1.0_tinyI2Cabstract.md
@@ -1,6 +1,6 @@
 # TinyI2C プロジェクトの概要
 
-___TinyI2C___ はmbed^TM^ 互換のマイクロコントローラで小さなUART-I^2^C変換モジュールの
+**_TinyI2C_** はmbed^TM^ 互換のマイクロコントローラで小さなUART-I^2^C変換モジュールの
 ハードウェアとソフトウェアを設計するプロジェクトです。**`TinyI2C`** モジュールは
 UART^[<https://ja.wikipedia.org/wiki/UART>] で送られるコマンドパケットを変換し
 I^2^CやSPI通信したり、個別にプルアップ／プルダウンを指定可能なGPIOの読み書きを行います。
@@ -36,7 +36,7 @@ I^2^CやSPI通信したり、個別にプルアップ／プルダウンを指定
 - PySerialライブラリ
     - PIP(Pythonのパッケージインストーラ)で入手できます
     - `$ pip install pyserial`{.sh}
-- ___Windowsのみ___ mbedインタフェース用のドライバ[^mbed_Serial_port_driver] を
+- **_Windowsのみ_** mbedインタフェース用のドライバ[^mbed_Serial_port_driver] を
   インストールする必要があります。
 
 <!--  -->
@@ -75,7 +75,7 @@ GUIのソースコードは **`gui`** ディレクトリに用意されていま
 
 ### GUIコンパイル要件
 - PyQt4
-    - ___Windowsのみ___ OSに合わせてインストーラをダウンロードする形態のようです
+    - **_Windowsのみ_** OSに合わせてインストーラをダウンロードする形態のようです
 - pyinstaller
 
 ### GUIのコンパイルと実行
