--- a/doc/3.0_PythonAPI.md
+++ b/doc/3.0_PythonAPI.md
@@ -150,7 +150,7 @@ UARTポートから生データを受け取る
 
 \dotfill  <!-- *** *** *** *** *** *** *** *** *** *** *** *** *** *** ***  -->
 
-I^2^Cポートを変更する
+I^2^Cポートを変更する。Cコマンドのラッパー関数
 
 \hrulefill<!-- === === === === === === === === === === === === === === ===  -->
 
