[ DOC ] start to point techbookfest(https://techbookfest.org) for publish

--- a/doc/3.0_PythonAPI.md
+++ b/doc/3.0_PythonAPI.md
@@ -5,8 +5,7 @@
 - PySerial
 
 ## コンストラクタ
-\hrulefill<!-- === === === === === === === === === === === === === === ===  -->
-
+\hrulemfill<!-- === === === === === === === === === === === === === === ===  -->
 ### serial2i2c(  str port = 'com1', str baud = '115200' ) {.unnumbered}
 \dotfill  <!-- *** *** *** *** *** *** *** *** *** *** *** *** *** *** ***  -->
 
