--- a/doc/9.1_RevHistory.md
+++ b/doc/9.1_RevHistory.md
@@ -1,3 +1,4 @@
 # 更新履歴 {.unnumbered}
-## Revision 1.0(C91) {.unnumbered}
-- 最初の発行。
+## Revision 1.0(技術書典２) {.unnumbered}
+- 最初の発行。表紙に画像を埋め込むスタイルにしてみた
+- C91に出すつもりもあったけどずれ込みましたとさ
