--- a/doc/3.0_PythonAPI.md
+++ b/doc/3.0_PythonAPI.md
@@ -5,7 +5,7 @@
 - PySerial
 
 ## コンストラクタ
-\hrulemfill<!-- === === === === === === === === === === === === === === ===  -->
+\hrulefill<!-- === === === === === === === === === === === === === === ===  -->
 ### serial2i2c(  str port = 'com1', str baud = '115200' ) {.unnumbered}
 \dotfill  <!-- *** *** *** *** *** *** *** *** *** *** *** *** *** *** ***  -->
 
