[ DOC ] start using bitfield for register description tables
- register 0
- register 1

--- a/doc/2.0_Commands.md
+++ b/doc/2.0_Commands.md
@@ -199,6 +199,8 @@ Table: レジスタ０(CHIP_ID)
 
 `Out/register0.tmd`{.include}
 
+<!-- ![レジスタ０(CHIP_ID)](images/bitfields/register0.png) -->
+
 Table: レジスタ１(GPIO0_STAT)
 
 `Out/register1.tmd`{.include}
