[ DOC ] update register description table titles

--- a/doc/2.0_Commands.md
+++ b/doc/2.0_Commands.md
@@ -209,18 +209,18 @@ Table: レジスタ２(GPIO1_STAT)
 
 `Out/register2.tmd`{.include}
 
-Table: レジスタ３
+Table: レジスタ３(GPIO0_CONF)
 
 `Out/register3.tmd`{.include}
 
-Table: レジスタ４
+Table: レジスタ４(GPIO1_CONF)
 
 `Out/register4.tmd`{.include}
 
-Table: レジスタ５
+Table: レジスタ５(I2C_CONF)
 
 `Out/register5.tmd`{.include}
 
-Table: レジスタ６
+Table: レジスタ６(SPI_CONF)
 
 `Out/register6.tmd`{.include}
