[ DOC ] Nihongo Mendokusai

--- a/doc/9.1_RevHistory.md
+++ b/doc/9.1_RevHistory.md
@@ -2,3 +2,5 @@
 ## Revision 1.0(技術書典２) {.unnumbered}
 - 最初の発行。表紙に画像を埋め込むスタイルにしてみた
 - C91に出すつもりもあったけどずれ込みましたとさ
+- 日本語文書めんどい。
+    - 英語で書き上げたREADMEを日本語に書き換える作業はつらいですw 表の内容とか。
