--- a/doc/1.0_tinyI2Cabstract.md
+++ b/doc/1.0_tinyI2Cabstract.md
@@ -6,17 +6,27 @@ UART^[<https://ja.wikipedia.org/wiki/UART>] で送られるコマンドパケッ
 I^2^CやSPI通信したり、個別にプルアップ／プルダウンを指定可能なGPIOの読み書きを行います。
 
 ## プロジェクトディレクトリツリー
-<!-- ```{.sh} -->
-    (プロジェクトルート)
-    |
-    |---doc             （ドキュメントフォルダ）
-    |   `---data        （スクリーンショットなど）
-    |---mbed            （GUIビルド用pythonソースコードとQt4プロジェクトファイル）
-    |---gui             （ファームウェアソースコード（mbed用））
-    |---pcb             （tinyI2Cハードウェアの設計ファイル）
-    |   `---tinyI2C_P   （ガーバデータ）
-    `---python          （pythonライブラリ）
-<!-- ``` -->
+
++----------------------+------------------------------------------+
+| (プロジェクトルート) |                                          |
++----------------------+------------------------------------------+
+| `|`                  |                                          |
++----------------------+------------------------------------------+
+| `|---doc`            | （ドキュメントフォルダ）                 |
++----------------------+------------------------------------------+
+| `|   '---data`       | （スクリーンショットなど）               |
++----------------------+------------------------------------------+
+| `|---mbed`\          | （GUIビルド用pythonソースコードと\       |
+| `|`                  |   Qt4プロジェクトファイル）              |
++----------------------+------------------------------------------+
+| `|---gui`            | （ファームウェアソースコード（mbed用）） |
++----------------------+------------------------------------------+
+| `|---pcb`            | （tinyI2Cハードウェアの設計ファイル）    |
++----------------------+------------------------------------------+
+| `|   '---tinyI2C_P`  | （ガーバデータ）                         |
++----------------------+------------------------------------------+
+| `'---python`         | （pythonライブラリ）                     |
++----------------------+------------------------------------------+
 
 ## 特徴
 - FTDI^[<http://www.ftdichip.com/>] のUSBシリアル変換ケーブル^[TODO: TinyI2Cのみ]
@@ -66,8 +76,6 @@ I^2^CやSPI通信したり、個別にプルアップ／プルダウンを指定
 ```
 usage: test.py [-h] [--port PORT] [--baud BAUD]
 ```
-<!-- # Demo
-  try `python/test.py` -->
 
 ## GUIデモ
 GUIのソースコードは **`gui`** ディレクトリに用意されています。
