--- a/doc/3.0_PythonAPI.md
+++ b/doc/3.0_PythonAPI.md
@@ -5,217 +5,187 @@
 - PySerial
 
 ## コンストラクタ
-\hrulefill<!-- === === === === === === === === === === === === === === ===  -->
 
-### serial2i2c(  str port = 'com1', str baud = '115200' ) {.unnumbered}
-\dotfill  <!-- *** *** *** *** *** *** *** *** *** *** *** *** *** *** ***  -->
++-------------------------------------------------------------------------------+
+| **`serial2i2c(  str port = 'com1', str baud = '115200' )`**                   |
++===============================================================================+
+| - **argument**                                                                |
+|     - **`port`** Serial/UART port name; "COM1", "/dev/ttyUSB0" etc.\          |
+|     - **`baud`** UART baudrate: 115200 or need to align with firmware\        |
+|      setting for other rate                                                   |
++-------------------------------------------------------------------------------+
+| `port`につながっている`TinyI2C`デバイスに接続する\                            |
+| ＊ボーレートを変更する場合はファームウェアにも変更が必要                      |
++-------------------------------------------------------------------------------+
 
-- **argument**
-    - **`port`** Serial/UART port name; "COM1", "/dev/ttyUSB0" etc.
-    - **`baud`** UART baudrate: 115200 or need to align with firmware setting
-      for other rate
+<!--  -->
 
-\dotfill  <!-- *** *** *** *** *** *** *** *** *** *** *** *** *** *** ***  -->
-
-`port`につながっている`TinyI2C`デバイスに接続する\
-＊ボーレートを変更する場合はファームウェアにも変更が必要
-
-\hrulefill<!-- === === === === === === === === === === === === === === ===  -->
++-------------------------------------------------------------------------------+
+| **`serial2i2c(  str port = 'com1', str baud = '115200' )`**                   |
++===============================================================================+
+| - **argument** \                                                              |
+|     - **`port`** Serial/UART port name; "COM1", "/dev/ttyUSB0" etc. \         |
+|     - **`baud`** UART baudrate: 115200 or need to align with firmware\        |
+|      setting for other rate                                                   |
++-------------------------------------------------------------------------------+
+| `port`につながっている`TinyI2C`デバイスに接続する\                            |
+| ＊ボーレートを変更する場合はファームウェアにも変更が必要                      |
++-------------------------------------------------------------------------------+
 
 \newpage
 ## UART操作API
-\hrulefill<!-- === === === === === === === === === === === === === === ===  -->
++-------------------------------------------------------------------------------+
+| **`serial2i2c.raw_write( str data = "C4FEE0CA"  )`**                          |
++===============================================================================+
+| - **argument**\                                                               |
+|     - **`data`** raw data to send, as text string\                            |
+| - **return**\                                                                 |
+|     - None                                                                    |
++-------------------------------------------------------------------------------+
+| 生データをUART（COMポート）に出力する                                         |
++-------------------------------------------------------------------------------+
 
-### serial2i2c.raw_write( str data = "C4FEE0CA"  ) {.unnumbered}
-\dotfill  <!-- *** *** *** *** *** *** *** *** *** *** *** *** *** *** ***  -->
+<!--  -->
 
-- **argument**
-    - **`data`** raw data to send, as text string
-- **return**
-    - None
-
-\dotfill  <!-- *** *** *** *** *** *** *** *** *** *** *** *** *** *** ***  -->
-
-生データをUART（COMポート）に出力する
-
-\hrulefill<!-- === === === === === === === === === === === === === === ===  -->
-
-\hrulefill<!-- === === === === === === === === === === === === === === ===  -->
-
-### serial2i2c.raw_read(  ) {.unnumbered}
-\dotfill  <!-- *** *** *** *** *** *** *** *** *** *** *** *** *** *** ***  -->
-
-- **return**
-    - \_ser.readline().strip()
-
-\dotfill  <!-- *** *** *** *** *** *** *** *** *** *** *** *** *** *** ***  -->
-
-UARTポートから生データを受け取る
-
-\hrulefill<!-- === === === === === === === === === === === === === === ===  -->
++-------------------------------------------------------------------------------+
+| **`serial2i2c.raw_read(  )`**                                                 |
++===============================================================================+
+| - **return**\                                                                 |
+|     - \_ser.readline().strip()                                                |
++-------------------------------------------------------------------------------+
+|  UARTポートから生データを受け取る                                             |
++-------------------------------------------------------------------------------+
 
 \newpage
 ## I^2^Cバス操作API
-\hrulefill<!-- === === === === === === === === === === === === === === ===  -->
 
-### serial2i2c.start(   ) {.unnumbered}
-\dotfill  <!-- *** *** *** *** *** *** *** *** *** *** *** *** *** *** ***  -->
++-------------------------------------------------------------------------------+
+| **`serial2i2c.start(   )`**                                                   |
++===============================================================================+
+| - **return**\                                                                 |
+|     - None                                                                    |
++-------------------------------------------------------------------------------+
+|  現在のI^2^Cポートにスタートコンディションを発行する                          |
++-------------------------------------------------------------------------------+
 
-- **return**
-    - None
+<!--  -->
 
-\dotfill  <!-- *** *** *** *** *** *** *** *** *** *** *** *** *** *** ***  -->
++-------------------------------------------------------------------------------+
+| **`serial2i2c.stop(   )`**                                                    |
++===============================================================================+
+| - **return**\                                                                 |
+|     - None                                                                    |
++-------------------------------------------------------------------------------+
+|  現在のI^2^Cポートにストップコンディションを発行する                          |
++-------------------------------------------------------------------------------+
 
-現在のI^2^Cポートにスタートコンディションを発行する
+<!--  -->
 
-\hrulefill<!-- === === === === === === === === === === === === === === ===  -->
++-------------------------------------------------------------------------------+
+| **`serial2i2c.read( int address, int length = 1 )`**                          |
++===============================================================================+
+| - **argument**\                                                               |
+|     - **`address`** *8bit* I^2^C slave address\                               |
+|     - **`length `** data length to read from slave\                           |
+| - **return**\                                                                 |
+|     - str raw_read()                                                          |
++-------------------------------------------------------------------------------+
+| 現在のI^2^Cポートにつながっているスレーブデバイスから`length`バイト読み出す   |
++-------------------------------------------------------------------------------+
 
-\hrulefill<!-- === === === === === === === === === === === === === === ===  -->
+<!--  -->
 
-### serial2i2c.stop(   ) {.unnumbered}
-\dotfill  <!-- *** *** *** *** *** *** *** *** *** *** *** *** *** *** ***  -->
++-------------------------------------------------------------------------------+
+| **`serial2i2c.write( int address, int data = 0 )`**                           |
++===============================================================================+
+| - **argument**\                                                               |
+|     - **`address`** *8bit* I^2^C slave address\                               |
+|     - **` data  `** data to write\                                            |
+| - **return**\                                                                 |
+|     - str raw_read()                                                          |
++-------------------------------------------------------------------------------+
+| 現在のI^2^Cポートにつながっているスレーブデバイスに`data`を書き込む           |
++-------------------------------------------------------------------------------+
 
-- **return**
-    - None
+<!--  -->
 
-\dotfill  <!-- *** *** *** *** *** *** *** *** *** *** *** *** *** *** ***  -->
++-------------------------------------------------------------------------------+
+| **`serial2i2c.write_and_read( int address, int wdata = 0, int rlength = 1 )`**|
++===============================================================================+
+| - **argument**\                                                               |
+|     - **`address`** *8bit* I^2^C slave address\                               |
+|     - **` wdata `** data to write\                                            |
+|     - **`rlength`** data length to read from slave\                           |
+| - **return**\                                                                 |
+|     - str raw_read()                                                          |
++-------------------------------------------------------------------------------+
+| 現在のI^2^Cポートにつながっているスレーブデバイスに`data`を書き込んだあとで   |
+| `length`バイト読み出す                                                        |
++-------------------------------------------------------------------------------+
 
-現在のI^2^Cポートにストップコンディションを発行する
+<!--  -->
 
-\hrulefill<!-- === === === === === === === === === === === === === === ===  -->
-
-\hrulefill<!-- === === === === === === === === === === === === === === ===  -->
-
-### serial2i2c.read( int address, int length = 1 ) {.unnumbered}
-\dotfill  <!-- *** *** *** *** *** *** *** *** *** *** *** *** *** *** ***  -->
-
-- **argument**
-    - **`address`** *8bit* I^2^C slave address
-    - **`length `** data length to read from slave
-- **return**
-    - str raw_read()
-
-\dotfill  <!-- *** *** *** *** *** *** *** *** *** *** *** *** *** *** ***  -->
-
-現在のI^2^Cポートにつながっているスレーブデバイスから`length`バイト読み出す
-
-\hrulefill<!-- === === === === === === === === === === === === === === ===  -->
-
-\hrulefill<!-- === === === === === === === === === === === === === === ===  -->
-
-### serial2i2c.write( int address, int data = 0 ) {.unnumbered}
-\dotfill  <!-- *** *** *** *** *** *** *** *** *** *** *** *** *** *** ***  -->
-
-- **argument**
-    - **`address`** *8bit* I^2^C slave address
-    - **` data  `** data to write
-- **return**
-    - str raw_read()
-
-\dotfill  <!-- *** *** *** *** *** *** *** *** *** *** *** *** *** *** ***  -->
-
-現在のI^2^Cポートにつながっているスレーブデバイスに`data`を書き込む
-
-\hrulefill<!-- === === === === === === === === === === === === === === ===  -->
-
-\hrulefill<!-- === === === === === === === === === === === === === === ===  -->
-
-### serial2i2c.write_and_read( int address, int wdata = 0, int rlength = 1 ) {.unnumbered}
-\dotfill  <!-- *** *** *** *** *** *** *** *** *** *** *** *** *** *** ***  -->
-
-- **argument**
-    - **`address`** *8bit* I^2^C slave address
-    - **` wdata `** data to write
-    - **`rlength`** data length to read from slave
-- **return**
-    - str raw_read()
-
-\dotfill  <!-- *** *** *** *** *** *** *** *** *** *** *** *** *** *** ***  -->
-
-現在のI^2^Cポートにつながっているスレーブデバイスに`data`を書き込んだあとで
-`length`バイト読み出す
-
-\hrulefill<!-- === === === === === === === === === === === === === === ===  -->
-
-<!-- ### `'C'` 0x43 change channel -->
-
-\hrulefill<!-- === === === === === === === === === === === === === === ===  -->
-
-### serial2i2c.setChannel( int channel = 0 ) {.unnumbered}
-
-- **argument**
-    - **`channel`** I^2^C bus channel 1~4
-- **return**
-    - str raw_read()
-
-\dotfill  <!-- *** *** *** *** *** *** *** *** *** *** *** *** *** *** ***  -->
-
-I^2^Cポートを変更する。Cコマンドのラッパー関数
-
-\hrulefill<!-- === === === === === === === === === === === === === === ===  -->
++-------------------------------------------------------------------------------+
+| **`serial2i2c.setChannel( int channel = 0 )`**                                |
++===============================================================================+
+| - **argument**\                                                               |
+|     - **`channel`** I^2^C bus channel 1~4\                                    |
+| - **return**\                                                                 |
+|     - str raw_read()                                                          |
++-------------------------------------------------------------------------------+
+| I^2^Cポートを変更する。Cコマンドのラッパー関数                                |
++-------------------------------------------------------------------------------+
 
 \newpage
 ## SPIバス操作コマンドAPI
-\hrulefill<!-- === === === === === === === === === === === === === === ===  -->
 
-### serial2i2c.write_and_read_SPI( int wlength = 1, int rlength = 0, int data = 0xC4FEE0CA ) {.unnumbered}
-\dotfill  <!-- *** *** *** *** *** *** *** *** *** *** *** *** *** *** ***  -->
-
-- **argument**
-    - **`wlength`** _word length_ to write
-    - **`rlength`** _word length_ to send dummy data
-    - **` data  `** valid data to write
-- **return**
-    - str raw_read()
-
-\dotfill  <!-- *** *** *** *** *** *** *** *** *** *** *** *** *** *** ***  -->
-
-SPIバスに8または16ビットデータ列を`wlength` _ワード_ 書き込んだあと
-ダミーデータを`rlength` _ワード_ 書込む
-
-\hrulefill<!-- === === === === === === === === === === === === === === ===  -->
++-------------------------------------------------------------------------------+
+| **`serial2i2c.write_and_read_SPI( int wlength = 1, int rlength = 0, int data = 0xC4FEE0CA )`** |
++===============================================================================+
+| - **argument**\                                                               |
+|     - **`wlength`** _word length_ to write\                                   |
+|     - **`rlength`** _word length_ to send dummy data\                         |
+|     - **` data  `** valid data to write\                                      |
+| - **return**\                                                                 |
+|     - str raw_read()                                                          |
++-------------------------------------------------------------------------------+
+| SPIバスに8または16ビットデータ列を`wlength` _ワード_ 書き込んだあと           |
+| ダミーデータを`rlength` _ワード_ 書込む                                       |
++-------------------------------------------------------------------------------+
 
 \newpage
 ## 内部レジスタ操作コマンド
-\hrulefill<!-- === === === === === === === === === === === === === === ===  -->
 
-### serial2i2c.reg_read( str registers = "012" ) {.unnumbered}
++-------------------------------------------------------------------------------+
+| **`serial2i2c.reg_read( str registers = "012" )`**                            |
++===============================================================================+
+| - **argument**\                                                               |
+|     - **`registers`**\                                                        |
+| - **return**\                                                                 |
+|     - str raw_read()                                                          |
++-------------------------------------------------------------------------------+
+| `registers`のデータをまとめて読み出す                                         |
++-------------------------------------------------------------------------------+
 
-- **argument**
-    - **`registers`**
-- **return**
-    - str raw_read()
+<!--  -->
 
-\dotfill  <!-- *** *** *** *** *** *** *** *** *** *** *** *** *** *** ***  -->
-
-`registers`のデータをまとめて読み出す
-
-\hrulefill<!-- === === === === === === === === === === === === === === ===  -->
-
-\hrulefill<!-- === === === === === === === === === === === === === === ===  -->
-
-### serial2i2c.reg_write( list pair = [ ('1', 0xFF),] ) {.unnumbered}
-\dotfill  <!-- *** *** *** *** *** *** *** *** *** *** *** *** *** *** ***  -->
-
-- **argument**
-    - **`pair`** list of touple
-        - **`register`** register number
-        - **`  data  `** data to write to register
-- **return**
-    - str raw_read()
-
-\dotfill  <!-- *** *** *** *** *** *** *** *** *** *** *** *** *** *** ***  -->
-
-それぞれの`register`に、対応する`data`を書き込む
-
-`register`は'0'~'6'もしくは以下の定義済み変数が使える：
-
-    '0'     =>   CHIP_ID
-    '1'     =>   GPIO0_STAT
-    '2'     =>   GPIO1_STAT
-    '4'     =>   GPIO1_CONF
-    '3'     =>   GPIO0_CONF
-    '5'     =>   I2C_CONF
-    '6'     =>   SPI_CONF
-
-\hrulefill<!-- === === === === === === === === === === === === === === ===  -->
++-------------------------------------------------------------------------------+
+| **`serial2i2c.reg_write( list pair = [ ('1', 0xFF),] )`**                     |
++===============================================================================+
+| - **argument**\                                                               |
+|     - **`pair`** list of touple\                                              |
+|         - **`register`** register number\                                     |
+|         - **`  data  `** data to write to register\                           |
+| - **return**\                                                                 |
+|     - str raw_read()                                                          |
++-------------------------------------------------------------------------------+
+| それぞれの`register`に、対応する`data`を書き込む\                             |
+| `register`は'0'~'6'もしくは以下の定義済み変数が使える：\                      |
+|     '0'     =>   CHIP_ID\                                                     |
+|     '1'     =>   GPIO0_STAT\                                                  |
+|     '2'     =>   GPIO1_STAT\                                                  |
+|     '4'     =>   GPIO1_CONF\                                                  |
+|     '3'     =>   GPIO0_CONF\                                                  |
+|     '5'     =>   I2C_CONF\                                                    |
+|     '6'     =>   SPI_CONF                                                     |
++-------------------------------------------------------------------------------+
