update to use recent syntax

--- a/doc/2.0_Commands.md
+++ b/doc/2.0_Commands.md
@@ -1,4 +1,4 @@
-
+caption:csv
 # コマンドセットとプロトコル仕様
 
 +------------------------------------------------------------------------------+
@@ -20,7 +20,12 @@
     - 例：マスクを0x30として0x**A5** → 0x3**A** 0x3**5**
     - _0x30をマスクにするとアスキー文字列として送ることができます。_
 
-`Out/asciitable.tmd`{.include}
+```table
+---
+Markdown: True
+include: data/asciitable.csv
+---
+```
 
 - **`tinyI2C`** モジュールはパケットを受けとるUARTポートに終端文字が送られてくるのを
 (永久に)監視し続け、送られると最初にパケット文字列の長さ(`plength`)を測ります。
@@ -80,9 +85,13 @@
 
 - _サポートされていないチャネルを選択すると強制的に**チャネル0**が選択されます。_
 
-Table: I2Cバス変更パケットの例
-
-`Out/commandC.tmd`{.include}
+<!-- `Out/commandC.tmd`{.include} -->
+```table
+---
+caption: I2Cバス変更パケットの例
+include: data/commandC.csv
+---
+```
 
 ## SPIバス操作コマンド
 ### `'E'` 0x45 SPI transfer start
@@ -162,38 +171,75 @@ Table: 複数のレジスタから一度に読み出す例
 |  R   |     '0'     |     '1'     | ... |     '5'     |  P   |
 |  R   |     '1'     |     '0'     | ... |     '9'     |  P   |
 
-Table: multi registers write
 
-`Out/commandRandW_multi.tmd`{.include}
+```table
+---
+markdown: True
+caption: multi registers write
+include: data/commandRandW_multi.csv
+---
+```
 
-Table: レジスタのリスト
+```table
+---
+markdown: True
+caption: レジスタのリスト
+include: data/register_list.csv
+---
+```
 
-`Out/register_list.tmd`{.include}
+```table
+---
+markdown: True
+caption: レジスタ０(CHIP_ID)
+include: data/register0.csv
+---
+```
 
-Table: レジスタ０(CHIP_ID)
+```table
+---
+markdown: True
+caption: レジスタ１(GPIO0_STAT)
+include: data/register1.csv
+---
+```
 
-`Out/register0.tmd`{.include}
+```table
+---
+markdown: True
+caption: レジスタ２(GPIO1_STAT)
+include: data/register2.csv
+---
+```
 
-Table: レジスタ１(GPIO0_STAT)
+```table
+---
+markdown: True
+caption: レジスタ３(GPIO0_CONF)
+include: data/register3.csv
+---
+```
 
-`Out/register1.tmd`{.include}
+```table
+---
+markdown: True
+caption: レジスタ４(GPIO1_CONF)
+include: data/register4.csv
+---
+```
 
-Table: レジスタ２(GPIO1_STAT)
+```table
+---
+markdown: True
+caption: レジスタ５(I2C_CONF)
+include: data/register5.csv
+---
+```
 
-`Out/register2.tmd`{.include}
-
-Table: レジスタ３(GPIO0_CONF)
-
-`Out/register3.tmd`{.include}
-
-Table: レジスタ４(GPIO1_CONF)
-
-`Out/register4.tmd`{.include}
-
-Table: レジスタ５(I2C_CONF)
-
-`Out/register5.tmd`{.include}
-
-Table: レジスタ６(SPI_CONF)
-
-`Out/register6.tmd`{.include}
+```table
+---
+markdown: True
+caption: レジスタ６(SPI_CONF)
+include: data/register6.csv
+---
+```
