--- a/doc/3.0_PythonAPI.md
+++ b/doc/3.0_PythonAPI.md
@@ -32,7 +32,7 @@
 | ＊ボーレートを変更する場合はファームウェアにも変更が必要                      |
 +-------------------------------------------------------------------------------+
 
-\newpage
+\\newpage
 ## UART操作API
 +-------------------------------------------------------------------------------+
 | **`serial2i2c.raw_write( str data = "C4FEE0CA"  )`**                          |
@@ -56,7 +56,7 @@
 |  UARTポートから生データを受け取る                                             |
 +-------------------------------------------------------------------------------+
 
-\newpage
+\\newpage
 ## I^2^Cバス操作API
 
 +-------------------------------------------------------------------------------+
@@ -136,7 +136,7 @@
 | I^2^Cポートを変更する。Cコマンドのラッパー関数                                |
 +-------------------------------------------------------------------------------+
 
-\newpage
+\\newpage
 ## SPIバス操作コマンドAPI
 
 +-------------------------------------------------------------------------------+
@@ -153,7 +153,7 @@
 | ダミーデータを`rlength` _ワード_ 書込む                                       |
 +-------------------------------------------------------------------------------+
 
-\newpage
+\\newpage
 ## 内部レジスタ操作コマンド
 
 +-------------------------------------------------------------------------------+
